# api_projects

Daveslist/: README.md  USE_README.md  db.sqlite3  requirements.txt
Daveslist/api/: admin.py  models.py  serializers.py  urls.py  views.py
Daveslist/api/migrations/: 0001_initial.py  0002_auto_20210920_2304.py  0003_auto_20210920_2325.py
Daveslist/api/tests/: test_model.py
Daveslist/app/: settings.py  urls.py
django_solo/: Dockerfile  docker-compose.yml  instru.txt
django_solo/app/: db.sqlite3
django_solo/app/app/: settings.py  urls.py  views.py
django_solo/app/posts/: admin.py  apps.py  models.py  views.py
django_solo/app/users/: admin.py  apps.py  models.py  views.py
docker-compose/: Dockerfile  docker-compose.yml
fastApi_rest_generator/: README.md
fastApi_rest_generator/app/: Dockerfile  pyproject.toml
fastApi_rest_generator/app/app/: main.py
fastApi_rest_generator/app/app/core/: config.py
fastApi_rest_generator/app/core/: config.py
node_app/: .env  .env.sample  docker-compose.yml  index.js  node.Dockerfile  package-lock.json  package.json  proof.js
node_app/app/config/: db.config.js
node_app/app/controllers/: tutorial.controller.js
node_app/app/models/: index.js  tutorials.model.js
profiles_rest_api/: instructions.txt
profiles_rest_api/profiles_api/: models.py  permissions.py  serializers.py  urls.py  views.py
profiles_rest_api/profiles_project/: settings.py
recipe_app_api/: .travis.yml  Dockerfile  README.md  docker-compose.yml  instructions.txt  requirements.txt
traefik_uses/: docker-compose.yml
(+16 files in other folders)
