[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Admin <admin@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
uvicorn = "^0.11.3"
fastapi = "^0.54.1"


[tool.poetry.dev-dependencies]
autoflake = "^1.3.1"
flake8 = "^3.7.9"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[build.system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"